--- a/DeveloperExperience/WebUI/src/package.json
+++ b/DeveloperExperience/WebUI/src/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.16.0",
     "@element-plus/icons-vue": "^0.2.4",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.20.2",
@@ -18,7 +20,8 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vue-meta": "^3.0.0-alpha.2"
+    "vue-meta": "^3.0.0-alpha.2",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.11",
